<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextMaxHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="30"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textMaxHP_head"
        app:layout_constraintEnd_toEndOf="@+id/editTextAC"
        app:layout_constraintStart_toEndOf="@+id/textMaxHP_head"
        app:layout_constraintStart_toStartOf="@+id/editTextAC"
        app:layout_constraintTop_toTopOf="@+id/textMaxHP_head"
        app:layout_constraintVertical_bias="0.388" />

    <View
        android:id="@+id/dividerNavHeader"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        />

    <TextView
        android:id="@+id/CharName_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextCharacterName"
        app:layout_constraintStart_toStartOf="@+id/editTextCharacterName"
        app:layout_constraintTop_toBottomOf="@+id/editTextCharacterName"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextCharacterName"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/sample_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerNavHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CharClass_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/class_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toEndOf="@+id/editTextCharacterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerNavHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CharLevel_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:text="@string/level_head"
        app:layout_constraintBottom_toBottomOf="@+id/CharClass_Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/CharClass_Header"
        app:layout_constraintTop_toBottomOf="@+id/dividerNavHeader"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/CharRace_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="572dp"
        android:text="@string/race_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/CharName_header"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/CharName_header"
        app:layout_constraintTop_toBottomOf="@+id/CharName_header"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/CharAlignment_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/align_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/editTextCharLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/sample_level"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/CharLevel_Header"
        app:layout_constraintStart_toStartOf="@+id/CharLevel_Header"
        app:layout_constraintTop_toBottomOf="@+id/CharLevel_Header"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/selectRace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CharRace_Header"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/selectClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CharClass_Header"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/selectAlignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/CharAlignment_Header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CharAlignment_Header"
        app:layout_constraintTop_toTopOf="@+id/CharAlignment_Header"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:id="@+id/dividerStats"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginBottom="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <View
        android:id="@+id/dividerHealth"
        android:layout_width="1dp"
        android:layout_height="409dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="238dp"
        android:layout_marginBottom="139dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/ac_head"
        app:layout_constraintBottom_toTopOf="@+id/dividerStats"
        app:layout_constraintEnd_toStartOf="@+id/dividerHealth"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerNavHeader"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/textViewInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/initiative_head"
        app:layout_constraintEnd_toStartOf="@+id/scrollView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewAC"
        app:layout_constraintTop_toBottomOf="@+id/textViewAC" />

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/speed_head"
        app:layout_constraintEnd_toEndOf="@+id/textViewInit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewInit"
        app:layout_constraintTop_toBottomOf="@+id/textViewInit" />

    <TextView
        android:id="@+id/textMaxHP_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/maxHP_head"
        app:layout_constraintEnd_toEndOf="@+id/textViewSpeed"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/textViewSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpeed" />

    <TextView
        android:id="@+id/textViewCurrHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/currentHP_head"
        app:layout_constraintEnd_toEndOf="@+id/textMaxHP_head"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textMaxHP_head"
        app:layout_constraintTop_toBottomOf="@+id/textMaxHP_head" />

    <TextView
        android:id="@+id/textViewTempHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempHit_head"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewCurrHealth"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="@+id/textViewCurrHealth"
        app:layout_constraintTop_toBottomOf="@+id/editTextCurrHP"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textStrHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strength_head"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/textDexHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dex_head"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/textConHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/con_head"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/textIntHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/int_head"
        tools:layout_editor_absoluteX="227dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/textWisHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wis_head"
        tools:layout_editor_absoluteX="311dp"
        tools:layout_editor_absoluteY="627dp" />

    <TextView
        android:id="@+id/textCharHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/char_head"
        tools:layout_editor_absoluteX="303dp"
        tools:layout_editor_absoluteY="673dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="236dp"
        android:layout_height="444dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/dividerStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dividerHealth"
        app:layout_constraintTop_toBottomOf="@+id/selectAlignment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/editTextAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="12"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAC"
        app:layout_constraintStart_toEndOf="@+id/textViewAC"
        app:layout_constraintTop_toTopOf="@+id/textViewAC" />

    <TextView
        android:id="@+id/textSpeed_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSpeed"
        app:layout_constraintEnd_toEndOf="@+id/editTextAC"
        app:layout_constraintStart_toStartOf="@+id/editTextAC"
        app:layout_constraintTop_toTopOf="@+id/textViewSpeed" />

    <EditText
        android:id="@+id/editTextCurrHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="50"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewCurrHealth"
        app:layout_constraintStart_toStartOf="@+id/textViewCurrHealth"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrHealth"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTempHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="50"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextCurrHP"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/editTextCurrHP"
        app:layout_constraintTop_toBottomOf="@+id/textViewTempHealth"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>